corrects home component overflow

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,11 +5,15 @@
     flex-direction: column;
 }
 
+.row {
+    background-color: purple;
+}
+
 #contentContainer {
     flex-grow: 1;
     display: flex;
     width: 100%;
-    margin: 0 2%;
+    padding: 0 2%;
 }
 #mainContent {
     // background-color: green;
